--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -7,8 +7,8 @@ on:
 jobs:
   call-deploy:
     uses: tonsoo/deployer/.github/workflows/cleanup.yml@main
-    with:
-      ssh-host: ${{ secrets.SSH_HOST }}
-      ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-      ssh-user: ${{ secrets.SSH_USER }}
-      deploy-path: ${{ secrets.DEPLOY_PATH }}
+    secrets:
+      SSH_HOST: ${{ secrets.SSH_HOST }}
+      SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+      SSH_USER: ${{ secrets.SSH_USER }}
+      DEPLOY_PATH: ${{ secrets.DEPLOY_PATH }}
