--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,19 +4,19 @@ on:
   push:
     branches:
       - main
-      - dev
-      - ...
+      - "**"
 
 jobs:
   call-deploy:
     uses: tonsoo/deployer/.github/workflows/deploy.react.yml@main
+    secrets:
+      SSH_HOST: ${{ secrets.SSH_HOST }}
+      SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+      SSH_USER: ${{ secrets.SSH_USER }}
+      DEPLOY_PATH: ${{ secrets.DEPLOY_PATH }}
     with:
       repo: tonsoo/calliopen-frontend
+      app-name: calliopen
       domain: app.calliopen.com.br
       sub-domain: dev # Your dev branches will be accessible at branch.dev.example.com
-      db-password: ${{ secrets.DB_PASSWORD }}
-      ssh-host: ${{ secrets.SSH_HOST }}
-      ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-      ssh-user: ${{ secrets.SSH_USER }}
-      deploy-path: ${{ secrets.DEPLOY_PATH }}
       add-to-deploys: true # Will create an entry in your deploys lists
