--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
 services:
   app:
-    build: ./docker
-    container_name: "calliopen-webapp-{{BRANCH_NAME}}"
+    build:
+      context: ..
+      dockerfile: docker/Dockerfile
+    container_name: "{{APP_NAME}}-webapp-{{BRANCH_NAME}}"
     volumes:
       - .:/app
     labels:
@@ -9,7 +11,7 @@ services:
       caddy.reverse_proxy: "{{upstreams 80}}"
     networks:
       - web
-  
+
 networks:
   web:
     name: web
