--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
       DEPLOY_PATH: ${{ secrets.DEPLOY_PATH }}
     with:
       repo: tonsoo/calliopen-frontend
-      app-name: calliopen
+      app-name: calliopen-webapp
       domain: app.calliopen.com.br
       sub-domain: dev # Your dev branches will be accessible at branch.dev.example.com
       add-to-deploys: true # Will create an entry in your deploys lists
